# ostiki

./: .gitignore  LICENSE  README.md  WORKSPACE  compile  deps.bzl  devstart.sh  go.mod  go.sum  peer_messages.txt  prepare.sh  test_ban_repository_test.go  test_group_repository_test.go  test_permission_repository_test.go  test_routes_test.go  test_services_test.go  test_session_repository_test.go  test_ticket_repository_test.go  tikiserver.go
actions/: BUILD.bazel  act_domain_control.go  act_group_membership.go  act_obtain_aws_role.go  act_revoke.go  act_rtoken.go
apiserver/: BUILD.bazel  server.go  server_ban.go  server_domain.go  server_group.go  server_misc.go  server_session.go  server_ticket.go
appconfig/: BUILD.bazel  app_config.go  constants.go
bazel/ecr/: ecr.bzl
bazel/ecr/templates/: pusher.py.tpl
cache/: BUILD.bazel  hazelcast.go  no_cache.go
db/: BUILD.bazel  dynamoDB_ban.go  dynamoDB_domain.go  dynamoDB_group.go  dynamoDB_init.go  dynamoDB_session.go  dynamoDB_ticket.go
html/pages/: index.html
imo/: BUILD.bazel  listener.go  sender.go
logger/: BUILD.bazel  tiki_logger.go
middleware/: BUILD.bazel  mw_auth.go
models/: BUILD.bazel  ban.go  cache_layer.go  db_layer.go  domain.go  session.go  ticket.go  ticket_group.go  vars.go
repositories/: BUILD.bazel  ban_repository.go  domain_repository.go  group_repository.go  imo_repository.go  in_memory_objects_repository.go  permission_repository.go  session_repository.go  ticket_repository.go
routes/: BUILD.bazel  routes_ban.go  routes_check_token.go  routes_domain.go  routes_google_cb.go  routes_group.go  routes_init_handler.go  routes_peer.go  routes_session.go  routes_ticket.go  routes_version.go  routes_welcome.go
services/: BUILD.bazel  aws.go
static/js/: api.js
tools/: get_workspace_status.prod
utils/: BUILD.bazel  utils_homefolder.go  utils_imo.go
version/: BUILD.bazel  version.go
