load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "actions",
    srcs = [
        "act_domain_control.go",
        "act_revoke.go",
        "act_rtoken.go",
    ],
    importpath = "github.com/bcpitutor/ostiki/actions",
    visibility = ["//visibility:public"],
    deps = [
        "//repositories",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
    ],
)
