load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = ["tiki_logger.go"],
    importpath = "github.com/bcpitutor/ostiki/logger",
    visibility = ["//visibility:public"],
    deps = [
        "//appconfig",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
