load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repositories",
    srcs = [
        "ban_repository.go",
        "domain_repository.go",
        "group_repository.go",
        "in_memory_objects_repository.go",
        "permission_repository.go",
        "session_repository.go",
        "ticket_repository.go",
    ],
    importpath = "github.com/bcpitutor/ostiki/repositories",
    visibility = ["//visibility:public"],
    deps = [
        "//appconfig",
        "//logger",
        "//models",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@org_uber_go_dig//:dig",
    ],
)
